# reserchium

./: .env.example  .gitignore  README.md  demo.sh  main.py  mkdocs.yml  pyproject.toml  test_agent_api.py  verification_guide.md
.github/workflows/: docs.yml  test.yml
docs/: api.md  features.md  index.md  usage.md  verification.md
reserchium/: cli.py  config.py
reserchium/agent/: tools.py
reserchium/engine/: rag.py
reserchium/graph/: builder.py  visualize.py
reserchium/parsers/: arxiv.py  pdf.py  semanticscholar.py
tests/: test_cli.py  test_parsers.py
